# pychannelfinder

./: .copier-answers.yml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  docker-compose.patch
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/pychannelfinder/: __init__.py  client.py  types.py
src/pychannelfinder/api/channel_manager/: combined_query.py  create_4.py  create_5.py  query_2.py  query_count.py  read_2.py  remove_2.py  update_4.py  update_5.py
src/pychannelfinder/api/channel_processor_manager/: process_all_channels.py  process_channels.py  process_channels_1.py  processor_count.py  processor_info.py
src/pychannelfinder/api/channel_scroll/: query.py  query_1.py
src/pychannelfinder/api/info_manager/: info.py
src/pychannelfinder/api/property_manager/: add_single_1.py  create_2.py  create_3.py  list_1.py  read_1.py  remove_1.py  remove_single_1.py  update_2.py  update_3.py
src/pychannelfinder/api/tag_manager/: add_single.py  create.py  create_1.py  list_.py  read.py  remove.py  remove_single.py  update.py  update_1.py
src/pychannelfinder/models/: __init__.py  channel.py  create_2_body.py  create_4_body.py  create_body.py  multi_value_map_string_string.py  multi_value_map_string_string_all.py  property_.py  scroll.py  search_result.py  tag.py  update_2_body.py  update_4_body.py  update_body.py
tests/: conftest.py  test_api_channel.py  test_api_info.py  test_package.py
